--- a/mybatisapp/src/main/resources/templates/oldhtml/category_view.html
+++ b/mybatisapp/src/main/resources/templates/oldhtml/category_view.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="https://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>Category 보기</title>
