--- a/mybatisapp/src/main/resources/templates/index.html
+++ b/mybatisapp/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     Home Index
-    <div><a href="stw/oldhtml/category_static.html">정적 html</a> </div>
-    <div><a href="ctw/oldhtml/category_old">new category html</a> </div>
-    <div><a href="">new category</a> </div>
+    <div><a href="/stw/oldhtml/category_static.html">정적 html</a> </div>
+    <div><a href="/ctw/oldhtml/category_old?page=1&name=">old category html</a> </div>
+    <div><a href="">new category html</a> </div>
 </body>
 </html>
