--- a/mybatisapp/src/main/resources/templates/oldhtml/category_old.html
+++ b/mybatisapp/src/main/resources/templates/oldhtml/category_old.html
@@ -9,40 +9,43 @@
 </head>
 <body>
 
-<form id="form" name="form" method="post" action="/ctweb/oldhtml/category_old_act">
+<form id="form" name="form" method="post" action="/ctw/oldhtml/category_old_insert">
     <label for="id"></label><input type="number" id="id" name="id"/>
     <label for="name"></label><input type="text" id="name" name="name"/>
     <input type="submit" value="전송"/>
     <input type="reset" value="취소"/>
 </form>
-
+    <div>
+        Category List
+    </div>
 <section id="content-types">
     <div class="row">
-        <div class="col-xl-4 cpl-md-6 col-sm-12" th:each="item : ${itemList}">
+        <div class="col-xl-4 col-md-6 col-sm-12" th:each="item : ${itemList}">
             <div class="card">
-                <a th:href="@{/ctweb/oldhtml/category_old_view(id=${item.id})}">
+                <a th:href="@{/ctw/oldhtml/category_old_view(id=${item.id})}">
                     <div class="card-content">
                         <div class="card-body" th:text="${item.id}"></div>
                         <div class="card-text" th:text="${item.name}"></div>
                     </div>
-                </a>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-<ul id="categoryList">
-    <li>
-        <span>id</span>
-        <span> : </span>
-        <span>name</span>
-    </li>
-    <li  th:each="item : ${itemList}">
-        <a th:href="@{/ctweb/oldhtml/category_old_view(id=${item.id})}">
-            <span th:text="${item.id}">id</span>
+    </section>
+    <div>page : [[${searchCategoryDto.page}]], search name = [[${searchCategoryDto.name}]]</div>
+    <ul id="categoryList">
+        <li>
+            <span>id</span>
             <span> : </span>
-            <span th:text="${item.name}">name</span>
-        </a>
-    </li>
-</ul>
+            <span>name</span>
+        </li>
+        <li th:each="item : ${allList}">
+            <a th:href="@{/ctweb/oldhtml/category_old_view(id=${item.id})}">
+                <span th:text="${item.id}"></span>
+                <span> : </span>
+                <span th:text="${item.name}"></span>
+            </a>
+        </li>
+    </ul>
 </body>
 </html>
