--- a/mybatisapp/src/main/resources/templates/index.html
+++ b/mybatisapp/src/main/resources/templates/index.html
@@ -9,5 +9,6 @@
     <div><a href="/stw/oldhtml/category_static.html">정적 html</a> </div>
     <div><a href="/ctw/oldhtml/category_old?page=1&name=">old category html</a> </div>
     <div><a href="">new category html</a> </div>
+    <div><a href="/oldhtml/cateogory_list.html">리스트</a></div>
 </body>
 </html>
