--- a/mybatisapp/src/main/resources/templates/index.html
+++ b/mybatisapp/src/main/resources/templates/index.html
@@ -7,8 +7,6 @@
 <body>
     Home Index
     <div><a href="/stw/oldhtml/category_static.html">정적 html</a> </div>
-    <div><a href="/ctw/oldhtml/category_old?page=1&name=">old category html</a> </div>
-    <div><a href="">new category html</a> </div>
-    <div><a href="/oldhtml/cateogory_list.html">리스트</a></div>
+    <div><a href="/catweb/catweb/category_list?page=1&name=">catweb html</a> </div>
 </body>
 </html>
