--- a/mybatisapp/src/main/resources/templates/catweb/category_insert.html
+++ b/mybatisapp/src/main/resources/templates/catweb/category_insert.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Insert</title>
 </head>
 <body>
-
+    insert
 </body>
 </html>
