--- a/mybatisapp/src/main/resources/templates/index.html
+++ b/mybatisapp/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
 <body>
     Home Index
     <div><a href="/stw/oldhtml/category_static.html">정적 html</a> </div>
-    <div><a href="/catweb/catweb/category_list?page=1&name=">catweb html</a> </div>
+    <div><a href="/catweb/category_list?page=1&name=">catweb html</a> </div>
 </body>
 </html>
