--- a/mybatisapp/src/main/resources/templates/oldhtml/category_old.html
+++ b/mybatisapp/src/main/resources/templates/oldhtml/category_old.html
@@ -1,69 +1,69 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org" lang="ko">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Old Html</title>-->
-<!--    <link rel="stylesheet" href="/mazer/assets/compiled/css/app.css">-->
-<!--    <link rel="stylesheet" href="/mazer/assets/compiled/css/app-dark.css">-->
-<!--    <link rel="stylesheet" href="/mazer/assets/compiled/css/iconly.css">-->
-<!--    <script language="JavaScript" src="/js/jquery-3.7.1.min.js"></script>-->
-<!--    <script>-->
-<!--        //$(document).ready(function(){-->
-<!--        //    // Jquery 는 html 문서가 로딩이 완료 되면 이 부분을 실행한다.-->
-<!--        //});-->
-<!--        $(function(){-->
-<!--            // jQuery 3.0 버전부터 실행할 기능을 정의해주세요.-->
-<!--            let totPage = ([[${searchCategoryDto.total}]] + 9) / 10;-->
-<!--            let searchName = "[[${searchCategoryDto.name}]]";-->
-<!--            for (let i = 1; i <= totPage; i++) {-->
-<!--                $("#pageDiv").append(" <a href='category_old?page=" + i +-->
-<!--                    "&name=" + searchName + "'>[" + i + "]</a> ");-->
-<!--            }-->
-<!--        });-->
-<!--    </script>-->
-<!--</head>-->
-<!--<body>-->
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>Old Html</title>
+    <link rel="stylesheet" href="/mazer/assets/compiled/css/app.css">
+    <link rel="stylesheet" href="/mazer/assets/compiled/css/app-dark.css">
+    <link rel="stylesheet" href="/mazer/assets/compiled/css/iconly.css">
+    <script language="JavaScript" src="/js/jquery-3.7.1.min.js"></script>
+    <script>
+        //$(document).ready(function(){
+        //    // Jquery 는 html 문서가 로딩이 완료 되면 이 부분을 실행한다.
+        //});
+        $(function(){
+            // jQuery 3.0 버전부터 실행할 기능을 정의해주세요.
+            let totPage = ([[${searchCategoryDto.total}]] + 9) / 10;
+            let searchName = "[[${searchCategoryDto.name}]]";
+            for (let i = 1; i <= totPage; i++) {
+                $("#pageDiv").append(" <a href='category_old?page=" + i +
+                    "&name=" + searchName + "'>[" + i + "]</a> ");
+            }
+        });
+    </script>
+</head>
+<body>
 
-<!--<form id="form" name="form" method="post" action="/ctw/oldhtml/category_old_insert">-->
-<!--    <label for="id"></label><input type="number" id="id" name="id"/>-->
-<!--    <label for="name"></label><input type="text" id="name" name="name"/>-->
-<!--    <input type="submit" value="전송"/>-->
-<!--    <input type="reset" value="취소"/>-->
-<!--</form>-->
-<!--    <div>-->
-<!--        Category List-->
-<!--    </div>-->
-<!--<section id="content-types">-->
-<!--    <div class="row">-->
-<!--        <div class="col-xl-4 col-md-6 col-sm-12" th:each="item : ${itemList}">-->
-<!--            <div class="card">-->
-<!--                <a th:href="@{/ctw/oldhtml/category_old_view(id=${item.id})}">-->
-<!--                    <div class="card-content">-->
-<!--                        <div class="card-body" th:text="${item.id}"></div>-->
-<!--                        <div class="card-text" th:text="${item.name}"></div>-->
-<!--                    </div>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-<!--    <div id="pageDiv">-->
-<!--    </div>-->
-<!--    [(${pageHtml})]-->
-<!--    <div>total : [[${searchCategoryDto.total}]], page : [[${searchCategoryDto.page}]], search name = [[${searchCategoryDto.name}]]</div>-->
-<!--    <ul id="categoryList">-->
-<!--        <li>-->
-<!--            <span>id</span>-->
-<!--            <span> : </span>-->
-<!--            <span>name</span>-->
-<!--        </li>-->
-<!--        <li th:each="item : ${allList}">-->
-<!--            <a th:href="@{/ctw/oldhtml/category_old_view(id=${item.id})}">-->
-<!--                <span th:text="${item.id}"></span>-->
-<!--                <span> : </span>-->
-<!--                <span th:text="${item.name}"></span>-->
-<!--            </a>-->
-<!--        </li>-->
-<!--    </ul>-->
-<!--</body>-->
-<!--</html>-->
+<form id="form" name="form" method="post" action="/ctw/oldhtml/category_old_insert">
+    <label for="id"></label><input type="number" id="id" name="id"/>
+    <label for="name"></label><input type="text" id="name" name="name"/>
+    <input type="submit" value="전송"/>
+    <input type="reset" value="취소"/>
+</form>
+    <div>
+        Category List
+    </div>
+<section id="content-types">
+    <div class="row">
+        <div class="col-xl-4 col-md-6 col-sm-12" th:each="item : ${itemList}">
+            <div class="card">
+                <a th:href="@{/ctw/oldhtml/category_old_view(id=${item.id})}">
+                    <div class="card-content">
+                        <div class="card-body" th:text="${item.id}"></div>
+                        <div class="card-text" th:text="${item.name}"></div>
+                    </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div id="pageDiv">
+    </div>
+    [(${pageHtml})]
+    <div>total : [[${searchCategoryDto.total}]], page : [[${searchCategoryDto.page}]], search name = [[${searchCategoryDto.name}]]</div>
+    <ul id="categoryList">
+        <li>
+            <span>id</span>
+            <span> : </span>
+            <span>name</span>
+        </li>
+        <li th:each="item : ${allList}">
+            <a th:href="@{/ctw/oldhtml/category_old_view(id=${item.id})}">
+                <span th:text="${item.id}"></span>
+                <span> : </span>
+                <span th:text="${item.name}"></span>
+            </a>
+        </li>
+    </ul>
+</body>
+</html>
